infrastructure/kubernetes/employee-service/employee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: hrms
  labels:
    app: employee-service
spec:
  type: ClusterIP
  selector:
    app: employee-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
