infrastructure/kubernetes/employee-service/employee-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: employee-service-netpol
  namespace: hrms
spec:
  podSelector:
    matchLabels:
      app: employee-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: hrms
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8082
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: hrms
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 5672
    - to:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
